# jni-mangle

./: Cargo.toml  README.md
.github/workflows/: clippy.yml
examples/: example.rs
java-ident/: Cargo.toml
java-ident/src/: lib.rs  package.rs
src/: args.rs  lib.rs
src/mangle/: mod.rs
src/utils/: escape.rs  mod.rs  validators.rs
