[package]
name = "jni-mangle"
version = "0.1.2"
authors = ["Evan Pratten <ewpratten@gmail.com>"]
edition = "2021"
description = "Mangle Rust functions for use with JNI"
documentation = "https://docs.rs/jni-mangle"
readme = "README.md"
homepage = "https://github.com/ewpratten/jni-mangle"
repository = "https://github.com/ewpratten/jni-mangle"
license = "GPL-3.0"
keywords = ["jni", "function-signature"]
categories = ["development-tools::ffi", "rust-patterns"]

[dependencies]
darling = "^0.20.3"
syn = "^2.0.31"
quote = "^1.0.33"
proc-macro2 = "^1.0.66"
regex = "1.9.5"

[lib]
proc-macro = true
