[package]
name = "java-ident"
version = "0.1.0"
authors = ["Evan Pratten <ewpratten@gmail.com>"]
edition = "2021"
description = "Utilities for working with Java identifiers"
documentation = "https://docs.rs/java-ident"
readme = "README.md"
homepage = "https://github.com/ewpratten/jni-mangle/java-ident"
repository = "https://github.com/ewpratten/jni-mangle"
license = "GPL-3.0"
keywords = []
categories = []

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1.9.5"